--- a/router/src/main/resources/application.properties
+++ b/router/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-#高可用配置【配置此将视为集群的特殊节点,不配置是为普通集群节点】
-#HA.MY.PORT = 9988
-#HA.OHTER.URL = 127.0.0.1:9977
-#集群URL
-CLUSTER.URL = 127.0.0.1:9977;127.0.0.1:9988
+#高可用配置，端口采用默认固定：23596
+HA.IP = 192.168.51.115;192.168.163.92
 
 
 
