--- a/router/src/main/resources/log4j.properties
+++ b/router/src/main/resources/log4j.properties
@@ -46,8 +46,8 @@ log4j.appender.fatal.append=true
 log4j.appender.fatal.Encoding=UTF-8
 log4j.appender.fatal.File=${loghome}/fatal.log
 
-loghome=D:\\log
-#loghome=/home/dev1/server/log/logic
+#loghome=D:\\log
+loghome=/home/dev1/server/log/logic
 
 
 
