--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0</version>
     <modules>
-        <module>route-server</module>
-        <module>route-client</module>
+        <module>router-server</module>
+        <module>router-client</module>
         <module>router</module>
     </modules>
 
