--- a/router-client/pom.xml
+++ b/router-client/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0</version>
     </parent>
     <groupId>iih5.com</groupId>
-    <artifactId>route-client</artifactId>
+    <artifactId>router-client</artifactId>
     <version>1.0</version>
 
     <dependencies>
