--- a/router/pom.xml
+++ b/router/pom.xml
@@ -49,12 +49,12 @@
         </dependency>
         <dependency>
             <groupId>iih5.com</groupId>
-            <artifactId>route-client</artifactId>
+            <artifactId>router-client</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>iih5.com</groupId>
-            <artifactId>route-server</artifactId>
+            <artifactId>router-server</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
